# Course-Scheduling-System

./: README.md
Course Scheduling System/: CMakeLists.txt  chooseCourse.cpp  chooseCourse.h  courseManage.cpp  courseManage.h  main.cpp  startingMenu.cpp  startingMenu.h  tools.cpp  tools.h
Course Scheduling System/Easyx/: readme.txt
Course Scheduling System/Easyx/include/: easyx.h  graphics.h
